log-message-processor/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-message-processor
  template:
    metadata:
      labels:
        app: log-message-processor
        redis-access: "true"
    spec:
      restartPolicy: Always
      containers:
      - name: log-message-processor
        image: 561341012850.dkr.ecr.us-east-1.amazonaws.com/team43-log-message-processor:latest
